--- a/PaulQpro.Libraries.Math/PaulQpro.Libraries.Math.csproj
+++ b/PaulQpro.Libraries.Math/PaulQpro.Libraries.Math.csproj
@@ -6,6 +6,14 @@
     <Nullable>enable</Nullable>
     <RootNamespace>PaulQpro.Math</RootNamespace>
     <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
+    <ApplicationIcon />
+    <Win32Resource />
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>embedded</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
 </Project>
